--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:background="#FF000000">
 
-    <VideoView
-        android:id="@+id/videoView"
-        android:layout_width="1080dp"
-        android:layout_height="1920dp"
-        android:layout_centerInParent="true" />
+	<VideoView
+		android:id="@+id/videoView"
+		android:layout_width="1080dp"
+		android:layout_height="1920dp"
+		android:layout_centerInParent="true"/>
 
 </RelativeLayout>
+
