--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -3,13 +3,89 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:background="#FF000000">
+	android:background="@android:color/black">
 
 	<VideoView
 		android:id="@+id/videoView"
-		android:layout_width="1080dp"
-		android:layout_height="1920dp"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
 		android:layout_centerInParent="true"/>
+
+	<RelativeLayout
+		android:id="@+id/bottom_left_panel"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignParentBottom="true"
+		android:layout_alignParentStart="true"
+		android:layout_margin="16dp"
+		android:background="@android:color/transparent">
+
+		<ImageView
+			android:id="@+id/career_icon"
+			android:layout_width="80dp"
+			android:layout_height="80dp"
+			android:layout_centerHorizontal="true"
+			android:scaleType="fitCenter"
+			android:visibility="gone"/>
+
+		<TextView
+			android:id="@+id/character_name"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_above="@id/career_icon"
+			android:layout_centerHorizontal="true"
+			android:layout_marginBottom="4dp"
+			android:textColor="@android:color/white"
+			android:textSize="18sp"
+			android:textStyle="bold"
+			android:shadowColor="@android:color/black"
+			android:shadowRadius="3"
+			android:visibility="gone"/>
+
+		<TextView
+			android:id="@+id/operator_name"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_below="@id/career_icon"
+			android:layout_centerHorizontal="true"
+			android:layout_marginTop="4dp"
+			android:textColor="@android:color/white"
+			android:textSize="20sp"
+			android:shadowColor="@android:color/black"
+			android:shadowRadius="2"
+			android:visibility="gone"/>
+
+		<TextView
+			android:id="@+id/operator_star"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_below="@id/operator_name"
+			android:layout_centerHorizontal="true"
+			android:layout_marginTop="2dp"
+			android:textColor="#FFFF00"
+			android:textSize="20sp"
+			android:shadowColor="@android:color/black"
+			android:shadowRadius="2"
+			android:visibility="gone"/>
+
+	</RelativeLayout>
+
+	<TextView
+		android:id="@+id/introduction_text"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignParentBottom="true"
+		android:layout_alignParentEnd="true"
+		android:layout_margin="16dp"
+		android:maxWidth="300dp"
+		android:textColor="@android:color/white"
+		android:textSize="12sp"
+		android:lineSpacingExtra="2dp"
+		android:background="#80000000"
+		android:padding="8dp"
+		android:visibility="gone"
+		android:shadowColor="@android:color/black"
+		android:shadowRadius="2"/>
 
 </RelativeLayout>
 
